[package]
name = "regend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.3"
clap = { version = "4.4.7", features = [ "derive" ] }
wasm-bindgen = "0.2.88"
itertools = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
